секция велопатруль + текста выровнены

--- a/src/index.html
+++ b/src/index.html
@@ -99,12 +99,17 @@
                             </div>
                         </div>
                     </li>
-<!--                    <li class="menu_navigation-item">-->
-<!--                        <div class="menu_wrapper_img">-->
-<!--                            <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">-->
-<!--                        </div>-->
-<!--                        <a class="menu_navigation-link" href="#situation_centre">велопатруль</a>-->
-<!--                    </li>-->
+                    <li class="menu_navigation-item">
+                        <div class="menu_wrapper_img">
+                            <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">
+                        </div>
+                        <a class="menu_navigation-link" href="#velo_patrol">велопатруль</a>
+                        <div class="menu_preview-block">
+                            <div class="block-wrapper-video">
+                                <video class="menu_preview-video" src="./img/video/kater.mp4" muted loop playsinline></video>
+                            </div>
+                        </div>
+                    </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи ЦОДД" class="menu_nav-img">
@@ -536,7 +541,7 @@
                     </div>
                     <div class="brain_heart-2">
                         <p class="brain_heart-title">Ситуационный центр ЦОДД&nbsp;&mdash; &laquo;мозг и&nbsp;сердце&raquo; Интеллектуальной транспортной системы Москвы.</p>
-                        <p class="brain_heart-text">Ситуационный центр ЦОДД&nbsp;&mdash; &laquo;мозг и&nbsp;сердце&raquo; Интеллектуальной транспортной системы Москвы. Отсюда 24/7 следят за&nbsp;движением на&nbsp;дорогах, управляют светофорами, координируют работу Дорожного патруля, собирают данные о&nbsp;трафике и&nbsp;заторах, выводят информацию на&nbsp;электронные табло, координируют разные службы при крупных ДТП и&nbsp;ЧП.</p>
+                        <p class="brain_heart-text">Отсюда 24/7 следят за&nbsp;движением на&nbsp;дорогах, управляют светофорами, координируют работу Дорожного патруля, собирают данные о&nbsp;трафике и&nbsp;заторах, выводят информацию на&nbsp;электронные табло, координируют разные службы при крупных ДТП и&nbsp;ЧП.</p>
                         <img src="./img/layout/pages/main/bus_vector.svg" alt="Ситуационный центр рама">
                     </div>
                     <div class="major_events-3">
@@ -672,14 +677,65 @@
                         <p class="water_patrol_history-text">В&nbsp;его задачи входит фиксация нарушений движения и&nbsp;стоянки в&nbsp;акватории, оперативное взаимодействие с&nbsp;контрольно-надзорными и&nbsp;правоохранительными органами, проведение профилактических бесед о&nbsp;правилах поведения на&nbsp;воде.</p>
                     </div>
                     <div class="water_patrol_text_1">
-                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще&nbsp;на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
+                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;Речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще&nbsp;на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
                     </div>
                     <div class="water_patrol_text_2">
                         <p class="water_patrol-text">За&nbsp;прошлый летний сезон Водный патруль прошел 18&nbsp;тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100&nbsp;нарушений.</p>
                     </div>
                     <div class="water_patrol_text_mobile">
-                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
+                        <p class="water_patrol-text">У&nbsp;каждого члена экипажа есть жилет, а&nbsp;на&nbsp;катере все необходимое для связи между судоводителями и&nbsp;Речным ситуационном центром ЦОДД, а&nbsp;также для навигации. Еще на&nbsp;катере есть спасательный круг, аптечка, багор и&nbsp;линь.</p>
                         <p class="water_patrol-text">За&nbsp;прошлый летний сезон Водный патруль прошел 18&nbsp;тысяч километров. Совместно с&nbsp;Речным ситуационном центром выявлено свыше 100&nbsp;нарушений.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="velo_patrol" id="velo_patrol">
+            <div class="container_main">
+                <div class="velo_patrol_grid-wrapper">
+                    <div class="velo_patrol_title">
+                        <h1 class="velo_patrol-title title"><span class="velo_patrol-animation-1">велопатруль</span></h1>
+                    </div>
+                    <div class="velo_patrol_about">
+                        <p class="velo_patrol_about-subtitle">Когда наступает теплый сезон, в&nbsp;Москве начинает работать велопатруль.</p>
+                        <div class="velo_patrol_about-descr">
+                            <div class="velo_patrol_about-text">Это сотрудники ЦОДД на&nbsp;велосипедах, которые ездят по&nbsp;улицам столицы и&nbsp;помогают всем участникам дорожного движения.</div>
+                            <div class="velo_patrol_about-text">Патрульные объезжают всю территорию Москвы в&nbsp;пределах МКАД. Суммарный дневной пробег всех патрульных&nbsp;&mdash; порядка 350&nbsp;км.</div>
+                        </div>
+                    </div>
+                    <div class="velo_patrol_text_1">
+                        <p>Велопатруль оборудован всем необходимым для оперативной помощи на&nbsp;дороге: аптечкой и&nbsp;водой, ремонтным комплектом для велосипеда, огнетушителем, бланками европротокола. Сотрудники знают, как помочь в&nbsp;экстренной ситуации и&nbsp;оказать доврачебную помощь.</p>
+                    </div>
+                    <div class="velo_patrol_text_2">
+                        <p>Патруль следит за&nbsp;дорожной инфраструктурой: состоянием знаков, светофоров, навигационных стел, велопарковок и&nbsp;проч. Кроме того, в&nbsp;обязанности велопатруля входит освобождать велополосы, тротуары и&nbsp;пешеходные переходы от&nbsp;припаркованных автомобилей.</p>
+                    </div>
+                    <div class="velo_patrol_text_mobile">
+                        <p>Велопатруль оборудован всем необходимым для оперативной помощи на&nbsp;дороге: аптечкой и&nbsp;водой, ремонтным комплектом для велосипеда, огнетушителем, бланками европротокола. Сотрудники знают, как помочь в&nbsp;экстренной ситуации и&nbsp;оказать доврачебную помощь.</p>
+                        <p>Патруль следит за&nbsp;дорожной инфраструктурой: состоянием знаков, светофоров, навигационных стел, велопарковок и&nbsp;проч. Кроме того, в&nbsp;обязанности велопатруля входит освобождать велополосы, тротуары и&nbsp;пешеходные переходы от&nbsp;припаркованных автомобилей.</p>
+                    </div>
+                    <div class="velo_patrol_card parentCardForLargeMonitor">
+                        <a class="garage_model_card" href="./pages/velo.html">
+                            <div class="slid_img">
+                                <img class="menu_preview-img" src="./img/layout/pages/main/slider/amarok.png" alt="Патрульный пикап">
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" muted loop playsinline></video>
+                            </div>
+                            <div class="slid_info">
+                                <div class="slid_info-desc">
+                                    <p class="slid_info-title">Велопатруль ЦОДД</p>
+                                    <p class="slid_info-text">Велосипед</p>
+                                </div>
+                                <div class="slid_info-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                                        <mask id="mask0_1137_313" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="18" height="18">
+                                            <rect width="18" height="18" fill="#D9D9D9"/>
+                                        </mask>
+                                        <g mask="url(#mask0_1137_313)">
+                                            <path d="M4.80049 13.5L3.75049 12.45L10.9505 5.25H4.50049V3.75H13.5005V12.75H12.0005V6.3L4.80049 13.5Z" fill="#090909"/>
+                                        </g>
+                                    </svg>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -692,7 +748,7 @@
                         <h1 class="help_desk-title title"><span class="help_desk-animation-1">служба</span> <span class="help_desk-animation-2">помощи</span></h1>
                     </div>
                     <div class="parkon-2">
-                        <p class="parkon_title">110 автомобилей на&nbsp;базе мобильных комплексов фотовидеофиксации (так называемых &laquo;парконов&raquo;).</p>
+                        <p class="parkon_title">110 автомобилей на&nbsp;базе мобильных комплексов фотовидеофиксации (так&nbsp;называемых &laquo;парконов&raquo;).</p>
                         <div class="parkon_descr">
                             <p class="parkon_text">ЦОДД обновил свой парк и&nbsp;запустил дополнительную Службу помощи водителям.</p>
                             <p class="parkon_text">В&nbsp;машинах установили камеры с&nbsp;нейросетью. Они работают и&nbsp;как &laquo;умный регистратор&raquo; (распознают в&nbsp;потоке авто в&nbsp;розыске), и&nbsp;как помощники водителя (следят за&nbsp;усталостью)</p>
@@ -1096,7 +1152,7 @@
                             <a href="#traffic_patrol" class="footer-menu-link">Дорожный патруль</a>
                             <a href="#situation_centre" class="footer-menu-link">Мобильный ситуационный центр</a>
                             <a href="#water_patrol" class="footer-menu-link">Водный патруль</a>
-<!--                            <a href="#" class="footer-menu-link">Велопатруль</a>-->
+                            <a href="#velo_patrol" class="footer-menu-link">Велопатруль</a>
                             <a href="#help_desk" class="footer-menu-link">Служба помощи</a>
                         </div>
                     </div>
