--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -141,7 +141,7 @@
             <div class="header__info">
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
-                    <p class="header__info-text">Дорожный патруль</p>
+                    <p class="header__info-text">Volkswagen Amarok</p>
                     <p class="header__info-text">30 автомобилей</p>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                         <div class="tech_spec__titles">
                             <div class="text_spec__texts">
                                 <p class="tech_spec__title">Дорожный патруль</p>
-                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+<!--                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>-->
                             </div>
                         </div>
                         <div class="tech_spec__mission">
@@ -295,11 +295,11 @@
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
-<!--                        <div class="gallery_item">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/velo.html">
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
