--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -121,13 +121,7 @@
 <div class="progress-bar">
     <div class="progress-bar-container">
         <div class="image">
-            <!--            <img class="animated" src="/src/img/layout/loader/2.svg" alt="цодд">-->
-            <!--            <p class="image-text">ЦОДД</p>-->
             <img class="no_animated" src="/src/img/layout/loader/logo.gif" alt="цодд">
-            <!--            <video autoplay muted loop playsinline preload>-->
-            <!--                <source src="/src/img/layout/loader/logo.mp4" type="video/mp4">-->
-            <!--                <source src="/src/img/layout/loader/logo.webm" type="video/webm">-->
-            <!--            </video>-->
         </div>
         <span id="progress-label">0%</span>
         <div id="hellopreloader_barWrapper">
@@ -147,8 +141,8 @@
             <div class="header__info">
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
-                    <p class="header__info-text">Дорожный патруль</p>
-                    <p class="header__info-text">30 автомобилей</p>
+                    <p class="header__info-text">Ford Transit</p>
+                    <p class="header__info-text">14 автомобилей</p>
                 </div>
             </div>
         </div>
@@ -164,7 +158,7 @@
                         <div class="tech_spec__titles">
                             <div class="text_spec__texts">
                                 <p class="tech_spec__title">Дорожный патруль</p>
-                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>
+<!--                                <p class="tech_spec__subtitle">Автомобиль службы помощи ЦОДД</p>-->
                             </div>
                         </div>
                         <div class="tech_spec__mission">
@@ -306,11 +300,11 @@
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
-<!--                        <div class="gallery_item">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/velo.html">
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
