--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -142,7 +142,7 @@
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Москвич</p>
-                    <p class="header__info-text">125 автомобилей</p>
+<!--                    <p class="header__info-text">125 автомобилей</p>-->
                 </div>
             </div>
         </div>
@@ -222,12 +222,12 @@
                                     </div>
                                     <span class="tech_spec__outfit-text">Крестовой ключ</span>
                                 </li>
-                                <li class="tech_spec__outfit-item">
-                                    <div class="tech_spec__outfit-img">
-                                        <img src="../img/layout/outfit/solaris_gray/outfit_10.svg" alt="Камеры видеофиксации">
-                                    </div>
-                                    <span class="tech_spec__outfit-text">Камеры видеофиксации</span>
-                                </li>
+<!--                                <li class="tech_spec__outfit-item">-->
+<!--                                    <div class="tech_spec__outfit-img">-->
+<!--                                        <img src="../img/layout/outfit/solaris_gray/outfit_10.svg" alt="Камеры видеофиксации">-->
+<!--                                    </div>-->
+<!--                                    <span class="tech_spec__outfit-text">Камеры видеофиксации</span>-->
+<!--                                </li>-->
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
                                         <img src="../img/layout/outfit/solaris_gray/outfit_11.svg" alt="Комплекс с нейросетью">
@@ -301,11 +301,11 @@
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">-->
                             </a>
                         </div>
-<!--                        <div class="gallery_item">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
+                        <div class="gallery_item">
+                            <a class="gallery_item_link" href="../pages/velo.html">
 <!--                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">-->
-<!--                            </a>-->
-<!--                        </div>-->
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="auto_park_slider-button">
