--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -226,7 +226,7 @@
                                     <div class="tech_spec__outfit-img">
                                         <img src="../img/layout/outfit/solaris_gray/outfit_10.svg" alt="Камеры видеофиксации">
                                     </div>
-                                    <span class="tech_spec__outfit-text">Камеры видеофиксации</span>
+                                    <span class="tech_spec__outfit-text">Камера фиксации нарушений</span>
                                 </li>
                                 <li class="tech_spec__outfit-item">
                                     <div class="tech_spec__outfit-img">
