--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -141,7 +141,7 @@
             <div class="header__info">
                 <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
                 <div class="header__info-descr">
-                    <p class="header__info-text">Москвич</p>
+                    <p class="header__info-text">Москвич 3е</p>
 <!--                    <p class="header__info-text">125 автомобилей</p>-->
                 </div>
             </div>
