фото 360 + сцены интерьера москвич катер

--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -139,7 +139,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/amarok.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Volkswagen Amarok</p>
                     <p class="header__info-text">30 автомобилей</p>
@@ -251,10 +251,6 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%" id="VectaryIframe" class="amarok_iframe"></iframe>
-<!--<div class="hideARButton"></div>-->
-<div id="overlay"></div>
-
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -315,6 +311,10 @@
     </div>
 </section>
 
+<iframe src="" width="100%" height="100%" id="VectaryIframe" class="amarok_iframe"></iframe>
+<!--<div class="hideARButton"></div>-->
+<div id="overlay"></div>
+
 <!--<div id="Canvas_wrapper"></div>-->
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
@@ -335,7 +335,7 @@
 
         <img
                 id="room1"
-                src="https://coddmac.store/codd_garage/360/amarok/Interior_v2.png"
+                src="../img/layout/pages/main/360/amarok/amarok.png"
                 crossorigin="anonymous"
                 importance="high"
         />
