--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -221,9 +221,6 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/23bkuyEyPWkahKc2YGpnPH" width="100%" height="100%" id="VectaryIframe" class="bus_iframe"></iframe>
-<div id="overlay"></div>
-
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -284,6 +281,9 @@
     </div>
 </section>
 
+<iframe src="" width="100%" height="100%" id="VectaryIframe" class="bus_iframe"></iframe>
+<div id="overlay"></div>
+
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" device-orientation-permission-ui="
  denyButtonText: Отказаться;
  allowButtonText: Разрешить;
@@ -301,19 +301,19 @@
 
         <img
                 id="room1"
-                src="https://coddmac.store/codd_garage/360/bus_black/1.jpg"
+                src="../img/layout/pages/main/360/bus/bus_1.jpg"
                 crossorigin="anonymous"
                 importance="high"
         />
         <img
                 id="room2"
-                src="https://coddmac.store/codd_garage/360/bus_black/2.jpg"
+                src="../img/layout/pages/main/360/bus/bus_2.jpg"
                 crossorigin="anonymous"
                 importance="low"
         />
         <img
                 id="room3"
-                src="https://coddmac.store/codd_garage/360/bus_black/3.jpg"
+                src="../img/layout/pages/main/360/bus/bus_3.jpg"
                 crossorigin="anonymous"
                 importance="low"
         />
