--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -257,10 +257,6 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/7arDxbsHpAKCWD7uxgRqOq" width="100%" height="100%" id="VectaryIframe" class="moskvich_iframe"></iframe>
-<!--<div class="hideARButton"></div>-->
-<div id="overlay"></div>
-
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -321,6 +317,9 @@
     </div>
 </section>
 
+<iframe src="" width="100%" height="100%" id="VectaryIframe" class="moskvich_iframe"></iframe>
+<div id="overlay"></div>
+
 <!--<div id="Canvas_wrapper"></div>-->
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
@@ -341,34 +340,34 @@
 
         <img
                 id="room1"
-                src="https://coddmac.store/THREE/360/amarok/Interior.jpg"
+                src="../img/layout/pages/main/360/moskvich/moscvich.jpg"
                 crossorigin="anonymous"
                 importance="high"
         />
-        <img
-                id="room2"
-                src="https://coddmac.store/THREE/360/largus/Interior.jpg"
-                crossorigin="anonymous"
-                importance="low"
-        />
-        <img
-                id="room3"
-                src="https://coddmac.store/BKL/360/Varshavskaya/3.jpg"
-                crossorigin="anonymous"
-                importance="low"
-        />
-        <img
-                id="room4"
-                src="https://coddmac.store/BKL/360/Varshavskaya/4.jpg"
-                crossorigin="anonymous"
-                importance="low"
-        />
-        <img
-                id="room5"
-                src="https://coddmac.store/BKL/360/Varshavskaya/5.jpg"
-                crossorigin="anonymous"
-                importance="low"
-        />
+<!--        <img-->
+<!--                id="room2"-->
+<!--                src="https://coddmac.store/THREE/360/largus/Interior.jpg"-->
+<!--                crossorigin="anonymous"-->
+<!--                importance="low"-->
+<!--        />-->
+<!--        <img-->
+<!--                id="room3"-->
+<!--                src="https://coddmac.store/BKL/360/Varshavskaya/3.jpg"-->
+<!--                crossorigin="anonymous"-->
+<!--                importance="low"-->
+<!--        />-->
+<!--        <img-->
+<!--                id="room4"-->
+<!--                src="https://coddmac.store/BKL/360/Varshavskaya/4.jpg"-->
+<!--                crossorigin="anonymous"-->
+<!--                importance="low"-->
+<!--        />-->
+<!--        <img-->
+<!--                id="room5"-->
+<!--                src="https://coddmac.store/BKL/360/Varshavskaya/5.jpg"-->
+<!--                crossorigin="anonymous"-->
+<!--                importance="low"-->
+<!--        />-->
         <!--        <img-->
         <!--                id="hotspot"-->
         <!--                src="https://coddmac.store/BKL/360/source/Hotspot_blue_big.svg"-->
@@ -545,7 +544,7 @@
         ></a-plane>
     </a-entity>
 
-    <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="175"></a-sky>
+    <a-sky id="skybox" src="#room1" rotation="0 0 0" phi-start="-88"></a-sky>
 </a-scene>
 
 <script>
