--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -257,9 +257,6 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/2zkou5LI5mWhXqo06RLBTm" width="100%" height="100%" id="VectaryIframe" class="transit_iframe"></iframe>
-<div id="overlay"></div>
-
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -320,6 +317,9 @@
     </div>
 </section>
 
+<iframe src="" width="100%" height="100%" id="VectaryIframe" class="transit_iframe"></iframe>
+<div id="overlay"></div>
+
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
          device-orientation-permission-ui="
  denyButtonText: Отказаться;
@@ -341,13 +341,13 @@
 
         <img
                 id="room1"
-                src="https://coddmac.store/codd_garage/360/transit_green/1.png"
+                src="../img/layout/pages/main/360/ford/ford_1.png"
                 crossorigin="anonymous"
                 importance="high"
         />
         <img
                 id="room2"
-                src="https://coddmac.store/codd_garage/360/transit_green/2.jpg"
+                src="../img/layout/pages/main/360/ford/ford_2.jpg"
                 crossorigin="anonymous"
                 importance="low"
         />
