--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -257,9 +257,6 @@
     </div>
 </main>
 
-<iframe src="https://app.vectary.com/p/3yUUqLuKMivlvJ7atkLNjW" width="100%" height="100%" id="VectaryIframe" class="solaris_iframe"></iframe>
-<div id="overlay"></div>
-
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -320,6 +317,9 @@
     </div>
 </section>
 
+<iframe src="" width="100%" height="100%" id="VectaryIframe" class="solaris_iframe"></iframe>
+<div id="overlay"></div>
+
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
          device-orientation-permission-ui="
  denyButtonText: Отказаться;
@@ -341,7 +341,7 @@
 
         <img
                 id="room1"
-                src="https://coddmac.store/codd_garage/360/hyundai_silver/1.png"
+                src="../img/layout/pages/main/360/solaris/solaris.png"
                 crossorigin="anonymous"
                 importance="high"
         />
