--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -227,10 +227,6 @@
     </div>
 </main>
 
-<!--<iframe src="https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU" width="100%" height="100%" id="VectaryIframe" class="velo_iframe"></iframe>-->
-<!--<div class="hideARButton"></div>-->
-<div id="overlay"></div>
-
 <section class="auto_park">
     <div class="container">
         <div class="auto_park_wrapper">
@@ -290,6 +286,9 @@
         </div>
     </div>
 </section>
+
+<!--<iframe src="" width="100%" height="100%" id="VectaryIframe" class="velo_iframe"></iframe>-->
+<div id="overlay"></div>
 
 <!--<div id="Canvas_wrapper"></div>-->
 
