фикс блоков и адаптивы

--- a/src/index.html
+++ b/src/index.html
@@ -575,7 +575,7 @@
                         </a>
                     </div>
                     <div class="bus-6">
-                        <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
+                        <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">
                     </div>
                     <div class="man_text-7">
                         <p class="man_text-text">Мобильный Ситцентр построен на&nbsp;базе автобуса MAN. В&nbsp;его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и&nbsp;проч. Он&nbsp;полностью автономен и&nbsp;может работать как во&nbsp;время стоянки, так&nbsp;и&nbsp;в&nbsp;движении.</p>
@@ -599,7 +599,7 @@
                     <div class="bus_text">
                         <div class="bus_text-wrapper">
                             <div class="bus_text_img">
-                                <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
+                                <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">
                             </div>
                             <div class="bus_text_info">
                                 <p class="bus_descr">
@@ -623,7 +623,7 @@
                                 </div>
                                 <div class="situation_centre-card swiper-slide">
                                     <div class="slid_img">
-                                        <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
+                                        <img src="./img/layout/pages/main/bus.png" alt="Ситуационный центр" class="bus">
                                     </div>
                                     <div class="slid_info">
                                         <p class="slider-text">
@@ -748,15 +748,15 @@
                         <h1 class="help_desk-title title"><span class="help_desk-animation-1">служба</span> <span class="help_desk-animation-2">помощи</span></h1>
                     </div>
                     <div class="parkon-2">
-                        <p class="parkon_title">110 автомобилей на&nbsp;базе мобильных комплексов фотовидеофиксации (так&nbsp;называемых &laquo;парконов&raquo;).</p>
+                        <p class="parkon_title">Создана на&nbsp;базе мобильных комплексов фотовидеофиксации.</p>
                         <div class="parkon_descr">
-                            <p class="parkon_text">ЦОДД обновил свой парк и&nbsp;запустил дополнительную Службу помощи водителям.</p>
-                            <p class="parkon_text">В&nbsp;машинах установили камеры с&nbsp;нейросетью. Они работают и&nbsp;как&nbsp;&laquo;умный регистратор&raquo; (распознают в&nbsp;потоке авто в&nbsp;розыске), и&nbsp;как&nbsp;помощники водителя (следят за&nbsp;усталостью)</p>
+                            <p class="parkon_text">110 автомобилей патрулируют город 24/7 и&nbsp;приезжают к&nbsp;водителям, которые попали в&nbsp;ДТП или столкнулись со&nbsp;сложностями на&nbsp;дороге.</p>
+                            <p class="parkon_text">На&nbsp;машинах установлены камеры, которые автоматически следят за&nbsp;соблюдением ПДД, а&nbsp;также распознают транспорт, который находится в&nbsp;розыске.</p>
                         </div>
                     </div>
                     <div class="driver-3">
-                        <p class="driver_text">Еще водители Службы мониторят состояние дорожной инфраструктуры, о&nbsp;неполадках сообщают в&nbsp;ЦОДД.</p>
-                        <p class="driver_text">Каждый экипаж оборудован всем необходимым для&nbsp;помощи.</p>
+                        <p class="driver_text">Мониторит состояние дорожной инфраструктуры. Следит за&nbsp;знаками, светофорами и&nbsp;проч.</p>
+                        <p class="driver_text">С&nbsp;2023 года автопарк Службы помощи пополнился электрическими кроссоверами Москвич&nbsp;3е.</p>
                     </div>
 <!--                    <div class="сrew">-->
 <!--                        <p class="сrew_text">Каждый экипаж оборудован всем необходимым для помощи.</p>-->
@@ -981,8 +981,8 @@
 <!--                        <div class="text">Каждый экипаж оборудован всем необходимым для&nbsp;помощи:</div>-->
 <!--                    </div>-->
                     <div class="mobile_text_combo">
-                        <p class="mobile_text_combo-text">Еще водители Службы мониторят состояние дорожной инфраструктуры, о&nbsp;неполадках сообщают в&nbsp;ЦОДД.</p>
-                        <p class="mobile_text_combo-text">Каждый экипаж оборудован всем необходимым для&nbsp;помощи.</p>
+                        <p class="mobile_text_combo-text">Мониторит состояние дорожной инфраструктуры. Следит за&nbsp;знаками, светофорами и&nbsp;проч.</p>
+                        <p class="mobile_text_combo-text">С&nbsp;2023 года автопарк Службы помощи пополнился электрическими кроссоверами Москвич&nbsp;3е.</p>
                     </div>
 <!--                    <div class="slide-5">-->
 <!--                        <a class="garage_model_card" href="./pages/ford.html">-->
