--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -139,7 +139,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_models/amarok.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_amarock.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Volkswagen Amarok</p>
                     <p class="header__info-text">30 автомобилей</p>
@@ -311,7 +311,7 @@
     </div>
 </section>
 
-<iframe src="" width="100%" height="100%" id="VectaryIframe" class="amarok_iframe"></iframe>
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src=""  width="100%" height="100%" class="amarok_iframe VectaryIframe"></iframe>
 <!--<div class="hideARButton"></div>-->
 <div id="overlay"></div>
 
