--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -139,7 +139,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_bus.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Man</p>
                     <p class="header__info-text">1 транспортное средство</p>
@@ -197,6 +197,12 @@
                                         <img src="../img/layout/outfit/bus/outfit_5.svg" alt="Телекоммуникационное оборудование">
                                     </div>
                                     <span class="tech_spec__outfit-text">Сетевое оборудование</span>
+                                </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/bus/outfit_6.svg" alt="Рабочие места">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Рабочие места</span>
                                 </li>
                             </ul>
                         </div>
@@ -281,7 +287,7 @@
     </div>
 </section>
 
-<iframe src="" width="100%" height="100%" id="VectaryIframe" class="bus_iframe"></iframe>
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="bus_iframe VectaryIframe"></iframe>
 <div id="overlay"></div>
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" device-orientation-permission-ui="
