--- a/src/pages/ford.html
+++ b/src/pages/ford.html
@@ -139,7 +139,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_ford.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Ford Transit</p>
                     <p class="header__info-text">14 автомобилей</p>
@@ -317,7 +317,7 @@
     </div>
 </section>
 
-<iframe src="" width="100%" height="100%" id="VectaryIframe" class="transit_iframe"></iframe>
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="transit_iframe VectaryIframe"></iframe>
 <div id="overlay"></div>
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
