--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -139,7 +139,7 @@
         <p class="header__logo-text">Гараж ЦОДД</p>
       </a>
       <div class="header__info">
-        <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+        <img class="header__info-img" src="../img/layout/header_models/preview_kater.png" alt="model_preview">
         <div class="header__info-descr">
           <p class="header__info-text">Катер</p>
           <p class="header__info-text">1 транспортное средство</p>
@@ -209,6 +209,12 @@
                     <img src="../img/layout/outfit/kater/outfit_6.svg" alt="Багор">
                   </div>
                   <span class="tech_spec__outfit-text">Багор</span>
+                </li>
+                <li class="tech_spec__outfit-item">
+                  <div class="tech_spec__outfit-img">
+                    <img src="../img/layout/outfit/kater/outfit_7.svg" alt="АИС транспондер">
+                  </div>
+                  <span class="tech_spec__outfit-text">АИС транспондер</span>
                 </li>
               </ul>
             </div>
@@ -293,7 +299,7 @@
   </div>
 </section>
 
-<iframe src="" width="100%" height="100%" id="VectaryIframe" class="kater_iframe"></iframe>
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="kater_iframe VectaryIframe"></iframe>
 <div id="overlay"></div>
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
