--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -139,7 +139,7 @@
                 <p class="header__logo-text">Гараж ЦОДД</p>
             </a>
             <div class="header__info">
-                <img class="header__info-img" src="../img/layout/header_img2.png" alt="model_preview">
+                <img class="header__info-img" src="../img/layout/header_models/preview_solaris.png" alt="model_preview">
                 <div class="header__info-descr">
                     <p class="header__info-text">Hyundai Solaris</p>
                     <p class="header__info-text">110 автомобилей</p>
@@ -234,6 +234,12 @@
                                     </div>
                                     <span class="tech_spec__outfit-text">Комплекс с нейросетью</span>
                                 </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_12.svg" alt="Жезл регулировщика">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Жезл регулировщика</span>
+                                </li>
                             </ul>
                         </div>
                         <div class="tech_spec__button">
@@ -317,7 +323,7 @@
     </div>
 </section>
 
-<iframe src="" width="100%" height="100%" id="VectaryIframe" class="solaris_iframe"></iframe>
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="solaris_iframe VectaryIframe"></iframe>
 <div id="overlay"></div>
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
