--- a/src/pages/velo.html
+++ b/src/pages/velo.html
@@ -204,6 +204,12 @@
                                     </div>
                                     <span class="tech_spec__outfit-text">Приложение «Помощник Москвы»</span>
                                 </li>
+                                <li class="tech_spec__outfit-item">
+                                    <div class="tech_spec__outfit-img">
+                                        <img src="../img/layout/outfit/solaris_gray/outfit_12.svg" alt="Жезл регулировщика">
+                                    </div>
+                                    <span class="tech_spec__outfit-text">Жезл регулировщика</span>
+                                </li>
                             </ul>
                         </div>
                         <div class="tech_spec__button">
@@ -287,7 +293,7 @@
     </div>
 </section>
 
-<!--<iframe src="" width="100%" height="100%" id="VectaryIframe" class="velo_iframe"></iframe>-->
+<!--<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="velo_iframe VectaryIframe"></iframe>-->
 <div id="overlay"></div>
 
 <!--<div id="Canvas_wrapper"></div>-->
